[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/SystemManager.gd" type="Script" id=1]
[ext_resource path="res://AnimationPlayer.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="System" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -512.0
margin_bottom = -300.0
rect_pivot_offset = Vector2( 256, 150 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 1, 1, 1, 0.368627 )

[node name="Close" type="CenterContainer" parent="."]
margin_left = 371.0
margin_top = 1.0
margin_right = 510.0
margin_bottom = 88.0

[node name="AnimationPlayer" parent="." instance=ExtResource( 2 )]

[node name="OsLabelInfo" type="Label" parent="."]
margin_top = 16.0
margin_right = 512.0
margin_bottom = 47.0
text = "WELCOME TO"
align = 1
valign = 1

[node name="Info" type="Panel" parent="."]
margin_top = 48.0
margin_right = 256.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )

[node name="CpuLabelInfo" type="Label" parent="Info"]
margin_left = 88.0
margin_top = 64.0
margin_right = 169.0
margin_bottom = 95.0
text = "EJEMPLO"
align = 1
valign = 1

[node name="RamLabel" type="Label" parent="Info"]
margin_left = 8.0
margin_top = 112.0
margin_right = 89.0
margin_bottom = 143.0
text = "RAM:"
align = 1
valign = 1

[node name="RamLabelInfo" type="Label" parent="Info"]
margin_left = 88.0
margin_top = 112.0
margin_right = 169.0
margin_bottom = 143.0
text = "RAM:"
align = 1
valign = 1

[node name="DiskLabel" type="Label" parent="Info"]
margin_left = 8.0
margin_top = 168.0
margin_right = 89.0
margin_bottom = 199.0
text = "DISK:"
align = 1
valign = 1

[node name="CpuLabel" type="Label" parent="Info"]
margin_left = 8.0
margin_top = 64.0
margin_right = 89.0
margin_bottom = 95.0
text = "CPU:"
align = 1
valign = 1

[connection signal="gui_input" from="Close" to="." method="_on_Close_gui_input"]
